--- a/components/layout/header/header.css
+++ b/components/layout/header/header.css
@@ -915,8 +915,8 @@
 .services-dropdown-menu {
     position: absolute;
     top: 100%;
-    right: -120px;
-    width: 700px;
+    right: -180px;
+    width: 920px;
     max-width: calc(100vw - 40px);
     background: #fff;
     border-radius: 12px;
@@ -932,8 +932,8 @@
 
 .services-dropdown-inner {
     display: grid;
-    grid-template-columns: 1fr 180px;
-    gap: 1.25rem;
+    grid-template-columns: 1fr 260px;
+    gap: 1.5rem;
 }
 
 .services-column {
@@ -956,9 +956,9 @@
     display: flex;
     flex-direction: column;
     gap: 0.125rem;
-    max-height: 350px;
-    overflow-y: auto;
-    padding-right: 0.25rem;
+    max-height: none;
+    overflow-y: visible;
+    padding-right: 0;
 }
 
 .services-list::-webkit-scrollbar {
